[gd_scene load_steps=9 format=3 uid="uid://6vh4qehvw0vd"]

[ext_resource type="Script" uid="uid://bx4e26r72jbo3" path="res://Utilities/UI Manager/Main Menu/main_menu.gd" id="1_1ehe0"]
[ext_resource type="FontFile" uid="uid://b01kfm1sg1ek7" path="res://Assets/Fonts/dogicabold.ttf" id="2_aab6r"]
[ext_resource type="Texture2D" uid="uid://cumex0makdvak" path="res://Assets/UI assets/catscape logo.png" id="3_0q8am"]
[ext_resource type="PackedScene" uid="uid://d27hf7qtwr2yr" path="res://World/level.tscn" id="3_aab6r"]
[ext_resource type="PackedScene" uid="uid://wiy7cfldrylr" path="res://Common/Animations/scene_transition_rect.tscn" id="5_utw6h"]

[sub_resource type="Animation" id="Animation_2wkub"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_utw6h"]
resource_name = "shrinkAndGrow"
length = 2.0
loop_mode = 2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_csfe7"]
_data = {
&"RESET": SubResource("Animation_2wkub"),
&"shrinkAndGrow": SubResource("Animation_utw6h")
}

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_1ehe0")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.368479, 0.393814, -0.842101, -0.100098, 0.91738, 0.385219, 0.924231, -0.0576526, 0.377456, 28.6655, 29.4704, 20.25)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SceneTransitionRect" parent="CanvasLayer" instance=ExtResource("5_utw6h")]
process_priority = 2
z_index = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -162.0
offset_right = -70.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Start Game" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
focus_neighbor_bottom = NodePath("../Cave")
theme_override_fonts/font = ExtResource("2_aab6r")
text = "Start Game"

[node name="Cave" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Start Game")
focus_neighbor_bottom = NodePath("../Overworld")
theme_override_fonts/font = ExtResource("2_aab6r")
text = "Cave Entrance"

[node name="Overworld" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Cave")
focus_neighbor_bottom = NodePath("../Test Level")
theme_override_fonts/font = ExtResource("2_aab6r")
text = "Overworld"

[node name="Test Level" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Overworld")
focus_neighbor_bottom = NodePath("../Credits")
theme_override_fonts/font = ExtResource("2_aab6r")
text = "Test Level"

[node name="Credits" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Test Level")
focus_neighbor_bottom = NodePath("../exit")
theme_override_fonts/font = ExtResource("2_aab6r")
text = "Credits"

[node name="exit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Credits")
focus_neighbor_bottom = NodePath("../Start Game")
theme_override_fonts/font = ExtResource("2_aab6r")
text = "Exit"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
position = Vector2(291, 258)
texture = ExtResource("3_0q8am")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/VBoxContainer/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_csfe7")
}
autoplay = "shrinkAndGrow"

[node name="Level" parent="." instance=ExtResource("3_aab6r")]

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Cave" to="." method="_on_cave_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Overworld" to="." method="_on_overworld_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Test Level" to="." method="_on_test_level_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
